--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,6 @@
 {
+  "start_url": "https://blog.seak.jp.net/pwa-app/",
+  "url": "https://blog.seak.jp.net/pwa-app/",
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
@@ -18,8 +20,10 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "screenshots": [],
+  "orientation": "portrait",
+  "lang":"ja"
 }
